content/_generated-doc/2.7/config/quarkus-amazon-lambda-general-config-items.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-amazon-lambda-general-config-items_configuration]]link:#quarkus-amazon-lambda-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.dev-port]]`link:#quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.dev-port[quarkus.lambda.mock-event-server.dev-port]`

[.description]
--
Port to access mock event server in dev mode
--|int 
|`8080`


a|icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.test-port]]`link:#quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.test-port[quarkus.lambda.mock-event-server.test-port]`

[.description]
--
Port to access mock event server in dev mode
--|int 
|`8081`

|===