content/_generated-doc/3.6/config/quarkus-amazon-lambda-general-config-items.adoc

:summaryTableId: quarkus-amazon-lambda-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-amazon-lambda-general-config-items_configuration]]link:#quarkus-amazon-lambda-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.enabled]]`link:#quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.enabled[quarkus.lambda.mock-event-server.enabled]`


[.description]
--
Setting to true will start event server even if quarkus.devservices.enabled=false

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.dev-port]]`link:#quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.dev-port[quarkus.lambda.mock-event-server.dev-port]`


[.description]
--
Port to access mock event server in dev mode

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_DEV_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_DEV_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8080`


a|icon:lock[title=Fixed at build time] [[quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.test-port]]`link:#quarkus-amazon-lambda-general-config-items_quarkus.lambda.mock-event-server.test-port[quarkus.lambda.mock-event-server.test-port]`


[.description]
--
Port to access mock event server in dev mode

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LAMBDA_MOCK_EVENT_SERVER_TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`8081`

|===